--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4",
+    "nodemon": "^2.0.16",
+    "rate-limiter": "^0.2.0",
+    "swagger-ui-express": "^4.4.0",
+    "xss-clean": "^0.1.1"
   }
 }
